--- a/index.html.html
+++ b/index.html.html
@@ -103,7 +103,7 @@
   <header>
     <div class="container">
       <!-- logo: replace with your optimized transparent logo file -->
-      <img class="logo" src="c:\Users\Ruth\Desktop\Nova pasta\logo-vandson-barbosa.png.png" alt="Logo Vandson Barbosa" />
+      <img class="logo" src="https://drive.google.com/file/d/1Oe50FC921y8Yr4RezUmBZdJgn1A7EEwy/view?usp=sharing" alt="Logo Vandson Barbosa" />
       <h1><span>VANDSON</span> <span class="shimmer">BARBOSA</span></h1>
       <p class="subtitle">Personal Trainer • Consultoria Fitness — Treinos personalizados, acompanhamento e resultados reais.</p>
 
@@ -126,7 +126,7 @@
     <!-- About -->
     <section id="about">
       <div class="about">
-        <div class="about-img"><img src="c:\Users\Ruth\Desktop\Nova pasta\FOTO VANDSON.png" alt="Vandson Barbosa"></div>
+        <div class="about-img"><img src="https://drive.google.com/file/d/1lVaCFr83kcHku0HuguaXWorVpR0p91Fz/view?usp=sharing" alt="Vandson Barbosa"></div>
         <div class="about-text">
           <h2 class="section-title">Sobre mim</h2>
           <p>Sou <strong>Vandson Barbosa</strong>, Profissional de educação física, com formação em duas graduações na universidade Unicesumar Serra talhada. Aqui quero trazer para meus alunos as melhores metodologias, planos que cabe no seu bolso e o melhor, treinos personalizados.</p>
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
