mudei o import da logo

--- a/index.html.html
+++ b/index.html.html
@@ -103,7 +103,7 @@
   <header>
     <div class="container">
       <!-- logo: replace with your optimized transparent logo file -->
-      <img class="logo" src="https://drive.google.com/file/d/1Oe50FC921y8Yr4RezUmBZdJgn1A7EEwy/view?usp=sharing" alt="Logo Vandson Barbosa" />
+      <img class="logo" src="./logo.png" alt="Logo Vandson Barbosa" />
       <h1><span>VANDSON</span> <span class="shimmer">BARBOSA</span></h1>
       <p class="subtitle">Personal Trainer • Consultoria Fitness — Treinos personalizados, acompanhamento e resultados reais.</p>
 
