mudei o nome da foto sobre mim

--- a/index.html.html
+++ b/index.html.html
@@ -126,7 +126,7 @@
     <!-- About -->
     <section id="about">
       <div class="about">
-        <div class="about-img"><img src="https://drive.google.com/file/d/1lVaCFr83kcHku0HuguaXWorVpR0p91Fz/view?usp=sharing" alt="Vandson Barbosa"></div>
+        <div class="about-img"><img src="./FOTO VANDSON.png" alt="Vandson Barbosa"></div>
         <div class="about-text">
           <h2 class="section-title">Sobre mim</h2>
           <p>Sou <strong>Vandson Barbosa</strong>, Profissional de educação física, com formação em duas graduações na universidade Unicesumar Serra talhada. Aqui quero trazer para meus alunos as melhores metodologias, planos que cabe no seu bolso e o melhor, treinos personalizados.</p>
