mudei o import da imagen do comentario de Carlos s

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <div class="testi">
           <div class="meta">
-            <div class="foto"><img src="c:\Users\Ruth\Downloads\retrato-de-um-homem-bonito.jpg" alt="Aluno 2" style="width:100%;height:100%;object-fit:cover"></div>
+            <div class="foto"><img src="./carlos.jfif" alt="Aluno 2" style="width:100%;height:100%;object-fit:cover"></div>
             <div>
               <strong>Carlos S.</strong>
               <div style="color:var(--muted);font-size:13px">Ganhou massa e força</div>
