mudei o import do email

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <!-- replace # with your profiles -->
         <a href="https://www.instagram.com/_vandsonbarbosa?igsh=ZnNvdmFlMG93YXlt" aria-label="Instagram">📸 Instagram</a>
         <a href="https://wa.me/5583998151486" target="_blank" rel="noopener noreferrer">💬 WhatsApp</a>
-        <a href="Email:vandsonbarbossajurub@gmail.com" aria-label="Email">✉️ contato@vandsonbarbosa.com</a>
+        <a href="Email:vandsonbarbossajurub@gmail.com" aria-label="Email">✉️ vandsonbarbossajurub@gmail.com</a>
       </div>
       <div style="color:var(--muted);font-size:13px">© 2025 Vandson Barbosa. Todos os direitos reservados.</div>
     </div>
